fix. 一些情况下的统计问题

--- a/i18n/zh_CN.json
+++ b/i18n/zh_CN.json
@@ -18,7 +18,9 @@
     "check_file_lost_btn": "立即检查最近快照情况",
     "file_lost_warning": "[syplugin-fileLostAlarmer]⚠发现文件丢失！",
     "file_compare_result_title": "[syplugin-fileLostAlarmer]%%快照对比结果",
-    "file_lost_warning_desp": "最近同步中，发现文件移除情况如下：",
+    "file_lost_warning_desp": "发现文件移除情况如下：",
+    "snapshot_sync_desp": "本次（最近）同步：%0%%1%；<br/>上次同步：%2%；",
+    "merge_sync": "[合并]",
     "assets_lost_warning": "资源文件移除<span class='og-file-lost-dialog-number'>%%</span>个",
     "critical_lost_warning": "快照关键文件移除<span class='og-file-lost-dialog-number'>%%</span>个",
     "3rd_lost_warning": "第三方文件移除<span class='og-file-lost-dialog-number'>%%</span>个",
